# pytblis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CMakeLists.txt  README.md  dev_install.sh  noxfile.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: conf.py  index.md
scripts/: cibw_before_all.sh
src/: pytblis.cxx
src/pytblis/: __init__.py  _pytblis_impl.pyi  defaultorder.py  einsum_impl.py  mixedtype.py  numpy_einsumpath.py  tensordot_impl.py  typecheck.py  wrappers.py
tests/: test_compiled.py  test_package.py  test_pytblis.py
